Cyberduck
https://cyberduck.io/

5.0.11 [https://trac.cyberduck.io/milestone/5.0.11]
- [Bugfix] Resuming file transfer starts over and errors out (Backblaze B2) (#9598)

5.0.10 [https://trac.cyberduck.io/milestone/5.0.10]
- [Feature] Handle URL events and open browser or start file transfer (Windows)
- [Bugfix] Retain container permission when updating ACL after upload complete for file (Backblaze B2)
- [Bugfix] Display incomplete multipart uploads as hidden files in browser (S3)

5.0.9 [https://trac.cyberduck.io/milestone/5.0.9]
- [Feature] Allow silent application update in background (Mac)
- [Feature] Display in-progress multipart uploads in browser (S3)
- [Feature] Importer for bookmarks from Transmit 4 (Mac)
- [Bugfix] Allow to select encryption keys from KMS different from default us-east-1 region (S3) (#9617)
- [Bugfix] Uncomfirmed reads are unbounded (SFTP) (#9603)
- [Bugfix] Mismatch for MD5 checksum when downloading large object (OpenStack Swift) (#8861)

5.0.8 [https://trac.cyberduck.io/milestone/5.0.8]
- [Feature] Register protocol handler for irods:// (#9614)
- [Bugfix] Listing directory failure on folder with ~ in path (S3) (#9611)

5.0.7 [https://trac.cyberduck.io/milestone/5.0.7]
- [Bugfix] Missing upload notification after editing file (Mac) (#9596)
- [Bugfix] Stale entries in directory cache when deleting folder (#9608)

5.0.6 [https://trac.cyberduck.io/milestone/5.0.6]
- [Feature] Signed application executable (Windows)

5.0.5 [https://trac.cyberduck.io/milestone/5.0.5]
- [Feature] Set modification date in metadata for uploads (Backblaze B2)

5.0.4 [https://trac.cyberduck.io/milestone/5.0.4]
- [Bugfix] Allow authentication with client certificate for empty issuer list from server (TLS)

5.0.3 [https://trac.cyberduck.io/milestone/5.0.3]
- [Feature] Deleting multiple files concurrently (#9585)

5.0.2 [https://trac.cyberduck.io/milestone/5.0.2]
- [Bugfix] Fail to list directory with equals symbol in path (S3) (#9574)