@@ -34,8 +34,11 @@
     <a href="https://trac.cyberduck.io/milestone/5.0.11"><strong>Version 5.0.11</strong></a>
 </p>
 <ul>
-    <li>[Feature] Resuming file transfer starts over and errors out (Backblaze B2) (<a
+    <li>[Bugfix] Resuming file transfer starts over and errors out (Backblaze B2) (<a
             href="https://trac.cyberduck.io/ticket/9598">#9598</a>)
+    </li>
+    <li>[Bugfix] Notification icon persists after application closed (Windows) (<a
+            href="https://trac.cyberduck.io/ticket/9613">#9613</a>)
     </li>
 </ul>
 <p>
